@@ -40,6 +40,9 @@ the skill set required to write scripts.
 
 New Features in 3.3:
 ====================
+* JEXL-379:     Allow new to use class identifier
+* JEXL-373:     Add support for prefix/postfix increment/decrement operators
+* JEXL-372:     Add support for 'standard' for loop
 * JEXL-369:     Add 'let' and 'const' variable declarations
 * JEXL-367:     Named function and fat-arrow (=>) lambda syntax
 * JEXL-366:     Fail to evaluate string and number comparison
@@ -51,6 +54,7 @@ New Features in 3.3:
 
 Bugs Fixed in 3.3:
 ==================
+* JEXL-378:     Incremental operator and decremental operator do not honor the side-effect flag
 * JEXL-376:     Introspector captures methods on non-exported classes (modules, java9+)
 * JEXL-375:     Cannot access enums by their name when using sandbox
 * JEXL-374:     No exception if dereferencing null object using safe(false) and antish(false)
